WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278204
Model process should kill Web process when it receives an invalid IPC message
https://bugs.webkit.org/show_bug.cgi?id=278204
Summary
Model process should kill Web process when it receives an invalid IPC message
Ryosuke Niwa
Reported
2024-08-15 17:58:06 PDT
Like network process and GPU process, model process should kill Web process when it receives an invalid IPC message.
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2024-08-15 18:13:00 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32278
EWS
Comment 2
2024-08-15 22:52:52 PDT
Committed
282332@main
(da11415cc0ab): <
https://commits.webkit.org/282332@main
> Reviewed commits have been landed. Closing PR #32278 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-08-15 22:53:14 PDT
<
rdar://problem/134017441
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug